<resources>
    <string name="apikey">D43B2DCD-D2A8-49EF-AFCC-6B1E309D1B58</string>

    <string name="app_name">aquaGroupWalkingApp</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to options tab on the MapActivity -->
    <string name="text_choose_following_option">Choose one of the following options: </string>
    <string name="btn_monitoring">SEE WHO YOU ARE MONITORING!</string>
    <string name="btn_monitored_by">SEE WHO YOU ARE BEING MONITORED BY!</string>

    <!-- Strings related to SeeMonitoredByActivity -->

    <string name="btn_stop_being_monitored">DELETE</string>
    <string name="btn_add_monitored_by">ADD NEW</string>
    <string name="text_click_to_stop_monitoredBy">Select user and click below to stop being monitored</string>


    <!-- Strings related to SeeMonitoringActivity -->

    <string name="btn_add_monitoree">ADD</string>
    <string name="btn_delete_monitoree">DELETE</string>
    <string name="text_click_to_add_or_delete">Click Add to add a user to your monitoring list.
    Click delete to remove a user from your monitoring list</string>
    <string name="Check_Monitoring_Status">Check Monitoring Status</string>
    <string name="title_activity_maps2">Map</string>

    <!-- Strings related to AddMonitoringActivityvity -->

    <string name="choose_email_to_add_monitor">Type the email address of the person who you would like to
    monitor.</string>

    <!-- Strings related to AddMonitoredByActivity -->

    <string name="choose_email_to_add_monitored_by">Type the email address of the person you would like to be
    monitored by.</string>
    <string name="title_activity_maps">Map</string>
    <string name="group_name">Group Name</string>
    <string name="meeting_place">Meeting Place</string>
    <string name="destination">Destination</string>


    <!-- Strings related to sending/receiving messages Activities -->

    <string name="select_group_to_msg">Here are the id(s) of groups which are leader of!</string>
    <string name="click_to_send_to_old_msg">Click to send message to old messages!</string>
    <string name="become_leader">Become Leader</string>


</resources>
